// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--pending"
          href="/r/vigoda"
          onClick={[Function]}
        >
          vigoda
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--pending"
          href="/r/snack"
          onClick={[Function]}
        >
          snack
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
